--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.MyApp103"
         tools:targetApi="31">
         <activity
-            android:name=".PageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".ActivityDash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ActivityList"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".PageActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
